--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "MuSiic ㋡",
-  "description": "MuSiic ㋡ by Kahrba",
+  "name": "Rs,Story",
+  "description": "Rs,Story",
   "version": "0.0.0",
   "main": "bot.js",
   "scripts": {
